infra/k8s/graphbuilder-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphbuilder-worker
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: graphbuilder-worker
  template:
    metadata:
      labels:
        app: graphbuilder-worker
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: worker-pool
      containers:
      - name: graphbuilder-worker
        image: registry.digitalocean.com/horizontal/graphbuilder:worker-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - rq info || exit 1
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
