infra/k8s/workers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-indexing
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: worker-indexing
  template:
    metadata:
      labels:
        app: worker-indexing
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: worker-pool
      containers:
      - name: worker
        image: registry.digitalocean.com/horizontal/api:worker-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-question
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: worker-question
  template:
    metadata:
      labels:
        app: worker-question
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: worker-pool
      containers:
      - name: worker
        image: registry.digitalocean.com/horizontal/api:worker-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: worker-default
  template:
    metadata:
      labels:
        app: worker-default
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: worker-pool
      containers:
      - name: worker
        image: registry.digitalocean.com/horizontal/api:worker-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
